--- a/index.html
+++ b/index.html
@@ -21,22 +21,25 @@
     </head>
     <body>
         <header>
+          <div id="titlecontainer">
             <a href="index.html"><h3>Site de I.A.</h3></a>
+          </div>
         </header>
-        <br>
         <br>
         <h1>Futuro website sobre inteligência artificial na robótica</h1>
         <br>
         <p>A inteligência artificial é e será muito importante no futuro...</p>
         <br>
-        <a href="https://www.eveo.com.br/blog/robo-sophia/" target="blank">
-          <img id="sophiaimg" src="Imagens/sophia.jpg"" alt="Sophia :o">
+        <div id="sophiacontainer">
+          <a href="https://www.eveo.com.br/blog/robo-sophia/" target="_blank">    
+          <img class="sophiaimg" src="Imagens/sophia.jpg"" alt="Sophia :o">
+        </div>
         </a>
         <br>
         <div class="sophiatext">
           <p>Aqui vemos um robô chamado 
             <a href="https://exame.com/tecnologia/robo-sophia-que-imita-expressoes-faciais-comeca-a-ser-produzida-em-massa/" 
-            target="blank">Sophia</a>
+            target="_blank">Sophia</a>
             ...
           </p>
         </div>
@@ -46,10 +49,10 @@
         <br>
         <footer id="footer">
           <span>por</span>
-          <a href="https://www.instagram.com/eduschelbauerr/" target="blank">Eduardo,</a>
-          <a href="https://www.instagram.com/maiconvsantos_/" target="blank">Maicon,</a>
-          <a href="https://www.instagram.com/junior_rocha_13/" target="blank">Junior</a>
-          <a href="https://www.instagram.com/lbnnnnnnn/" target="blank">e Vitor</a>
+          <a href="https://www.instagram.com/eduschelbauerr/" target="_blank">Eduardo,</a>
+          <a href="https://www.instagram.com/maiconvsantos_/" target="_blank">Maicon,</a>
+          <a href="https://www.instagram.com/junior_rocha_13/" target="_blank">Junior</a>
+          <a href="https://www.instagram.com/lbnnnnnnn/" target="_blank">e Vitor</a>
         </footer>
     </body>
 
