--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <body>
         <header>
           <div id="titlecontainer">
-            <a href="index.html"><h3>Site de I.A.</h3></a>
+            <a href="index.html"><h3>SITE DE I.A.</h3></a>
           </div>
         </header>
         <br>
