--- a/index.html
+++ b/index.html
@@ -47,14 +47,18 @@
         <button onclick="myFunction()">Click Me!</button>
         <img id="luciano" src="Imagens/luciano.jpg" alt="">
         <br>
-        <footer id="footer">
-          <span>por</span>
-          <a href="https://www.instagram.com/eduschelbauerr/" target="_blank">Eduardo,</a>
-          <a href="https://www.instagram.com/maiconvsantos_/" target="_blank">Maicon,</a>
-          <a href="https://www.instagram.com/junior_rocha_13/" target="_blank">Junior</a>
-          <a href="https://www.instagram.com/lbnnnnnnn/" target="_blank">e Vitor</a>
-        </footer>
-    </body>
+
+        <div id="footercontainer">
+          <footer class="footer">
+            <span>Made by</span>
+            <a href="https://www.instagram.com/eduschelbauerr/" target="_blank">Eduardo</a>,
+            <a href="https://www.instagram.com/maiconvsantos_/" target="_blank">Maicon</a>,
+            <a href="https://www.instagram.com/junior_rocha_13/" target="_blank">Junior</a> e
+            <a href="https://www.instagram.com/lbnnnnnnn/" target="_blank">Vitor</a>
+          </footer>
+        </div>
+
+      </body>
 
 <script>
 
